# chat-pdf

./: .dockerignore  .gitignore  Dockerfile  LICENSE  RAG System.postman_collection.json  README.Docker.md  README.md  chatbot.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: backend-ci.yml  frontend-ci.yml  security-scan.yml  zensical-pages.yml
admin-frontend/: Dockerfile  README.md  docker-compose.admin.yml  env.d.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
admin-frontend/src/app/: globals.css  (+2 more)
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  clear_users.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.ps1  run.sh  start_worker.py
backend/alembic/: env.py  versions$(date +%Y%m%d)_add_user_roles.py
backend/app/: config.py  database.py  exceptions.py
backend/backend/: mypy.ini  pyproject.toml
backend/backend/tests/integration/: test_rate_limiting.py
backend/chroma_data/: chroma.sqlite3
backend/scripts/: migrate_api_keys.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_health.py  test_users.py
docker/compose/: docker-compose.fullstack.yml  docker-compose.monitoring.yml  docker-compose.tracing.yml
docs/: DOCUMENTATION_GOVERNANCE.md  DOCUMENTATION_INDEX.md  README.md
docs/admin-guide/: README.md  document-management.md  monitoring.md  security.md  user-management.md
docs/backend/: SETUP.md
docs/developer-guide/: README.md  api-reference.md  architecture.md  custom-ml-models.md  llm-configuration.md  self-hosting.md
docs/guides/: CONTRIBUTING.md  DEPLOYMENT.md  MONITORING.md  SETUP.md  TESTING.md  TRACING.md  ZENSICAL_SETUP.md
docs/security/: ENCRYPTION.md
docs/user-guide/: README.md  asking-questions.md  conversations.md  faqs.md  help-chatbot.md  platform-overview.md  quick-start.md  uploading-documents.md  video-tutorials.md
docs/zensical/: zensical.toml
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  README.md  env.d.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/components/: error-boundary.tsx
frontend/e2e/: example.spec.ts
k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  postgres-statefulset.yaml  prometheus-rules.yaml  redis-deployment.yaml  secrets.yaml
landing/: .env.example  LANDING_ENHANCEMENTS.md  MULTIPAGE_STRUCTURE.md  README.md  env.d.ts  package.json  pnpm-lock.yaml
landing/app/: globals.css  layout.tsx  page.tsx
routes/: ai.py  base.py  chat.py
scripts/: README.md  deploy-local.ps1  deploy-local.sh  deploy-prod.ps1  deploy-prod.sh
services/: ai_service.py  pdf_service.py
(+193 files in other folders)
