[tool.poetry]
name = "chat-pdf"
version = "0.1.0"
description = ""
authors = ["Suyash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.4"
pypdf = "^5.0.1"
chromadb = "^0.5.15"
pytest = "^8.3.3"
python-multipart = "^0.0.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
python-dotenv = "^1.0.1"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
